[tool.poetry]
name = "async_chat"
version = "0.1.0"
description = "Chat developed on netchat(nc) and Python asyncio technologies"
authors = ["Isaev Nikita <isaev.nikita.yr@gmail.com>"]
license = "MIT Licence"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
aiofiles = "^22.1.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
